[gd_scene load_steps=3 format=3 uid="uid://3381m75yvmic"]

[ext_resource type="Script" path="res://scripts/menus/game_over_menu.gd" id="1_sgd61"]
[ext_resource type="FontFile" uid="uid://y2fv3f1jprtd" path="res://assets/fonts/bb.ttf" id="2_grbse"]

[node name="game_over_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sgd61")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 267.0
offset_top = 125.0
offset_right = 1628.0
offset_bottom = 921.0
color = Color(0.344076, 0.344076, 0.344076, 1)

[node name="label" type="Label" parent="."]
layout_mode = 0
offset_left = 675.0
offset_top = 398.0
offset_right = 1245.0
offset_bottom = 575.0
theme_override_fonts/font = ExtResource("2_grbse")
theme_override_font_sizes/font_size = 150
text = "GAME OVER"

[node name="restart_button" type="Button" parent="."]
layout_mode = 0
offset_left = 837.0
offset_top = 571.0
offset_right = 1096.0
offset_bottom = 638.0
theme_override_fonts/font = ExtResource("2_grbse")
theme_override_font_sizes/font_size = 50
text = "Restart Level"

[node name="quit_button" type="Button" parent="."]
layout_mode = 0
offset_left = 834.0
offset_top = 645.0
offset_right = 1093.0
offset_bottom = 712.0
theme_override_fonts/font = ExtResource("2_grbse")
theme_override_font_sizes/font_size = 50
text = "Quit"

[connection signal="pressed" from="restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="quit_button" to="." method="_on_quit_button_pressed"]
